This file contains the history of changes in the C++/Tcl library.

--- (July 31 2012)
The version 1.1.4.001 differs from 1.1.4 in the following ways:

- Tracking the global map to ensure the map is the last object to be realeased,
  otherwise memory segment error may occur in some systems.
  [ Thanks to the crash report from Stephan Effelsberg]

- Add variables in Makefile to support multiple operating systems.
  [Thanks to the suggestions from Stephan Effelsberg]

- Support a new data type: vector<string>.

- Support the control of Tcl variables (including set, release and trace).

- Clean the memory leak in interpreter::clear_definitions().

--- (July 9 2012)
The version 1.1.4.001 differs from 1.1.4 in the following ways:

- Using boost/preprocessor ro reduce template boilerplate.

- Support variable trace functions.

- Document updates.

---
The version 1.1.4 differs from 1.1.3 in the following ways:

- New developer.

- Support a user pass data as the last argument of a function

- Document updates.

---
The version 1.1.3 differs from 1.1.2 in the following ways:

- A bug in the initialization of interpreter object was fixed.

---
The version 1.1.2 differs from 1.1.1 in the following ways:

- Copyright was updated to cover 2006.

- Information was added to docs about the usage of the Boost library.

- Few bug fixes were applied to allow empty parameter lists with variadic
  functions.

---
The version 1.1.1 differs from 1.1.0 in the following ways:

- Explicit instantiations of some templates were moved to proper namespace.


---
The version 1.1.0 differs from 1.0.0 in the following ways:

- CHANGES file was added.

- LICENSE file was added with clear description of the license terms.

- Copyright was updated to cover 2005.

- Small patch was added to make the code compile on g++ 3.2.

- New assign method was added that accepts Tcl_Obj.

- Overload of interpreter::eval was added that accepts istream& parameter.